# breast-cancer-ml-research

./: .gitignore  README.md  api.py  pyproject.toml  requirements.txt  test_api.py
models/: wisconsin_best_model.pkl
notebooks/eda/: wisconsin_exploration.ipynb
notebooks/others/: wisconsin_error_analysis.ipynb
reports/: README.md
src/data/: load_data.py  split_data.py  synthetic_data_generation.py
src/evaluation/: metrics.py
src/features/: feature_selection.py
src/models/: export_model.py  ga_search_cv_config.py  model_settings.py
src/pipelines/: train_pipeline.py
src/utils/: paths.py  seed.py
