[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "breast-cancer-ml"
version = "0.1.0"
description = "Breast cancer classification with genetic optimization and MLOps"
authors = [
    { name = "Maria Velez" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "sklearn-genetic-opt",
    "xgboost",
    "lightgbm",
    "mlflow",
    "imbalanced-learn"
]

[tool.setuptools.packages.find]
where = ["src"]
